# STLAlgorythms_Xrange_Zip

./: CMakeLists.txt  README.md  algorithms.h  main.cpp  xrange.h  zip.h
gtests/: CMakeLists.txt  algorithms_tests.cpp  xrange_tests.cpp  zip_tests.cpp
